# cpp_help

./: CMakeLists.txt  README.md  h_txt.txt  main.cpp
h_calculations/: calculations.cpp
h_class/: classFoo.cpp  classFoo.h  classTestMain.cpp
h_colored_console_output/: cPrint.h  main.cpp
h_datatypes/: h_datatypes.cpp
h_string/: h_string.cpp
